<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/col_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:text="@string/col_trans_id_str" />
    <TextView
        android:id="@+id/col_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:text="@string/col_name_str" />
    <TextView
        android:id="@+id/col_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:text="@string/col_msg_str" />
    <TextView
        android:id="@+id/col_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:text="@string/col_amt_str" />
</LinearLayout>