<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kanit_light"
            android:gravity="center"
            android:text="@string/content"
            android:textColor="@color/barbie"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_light"
                android:textColor="@color/barbie"
                android:text="@string/weight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/weightinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:ems="10"
                android:fontFamily="@font/kanit_light"
                android:hint="@string/weighthint"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_light"
                android:gravity="center"
                android:text="@string/height"
                android:textColor="@color/barbie"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/heightinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:ems="10"
                android:fontFamily="@font/kanit_light"
                android:hint="@string/heighthint"
                android:inputType="numberDecimal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_light"
                android:text="@string/bmi"
                android:textColor="@color/barbie"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/bmioutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:fontFamily="@font/kanit_light"
                android:text="@string/bmioutput"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_light"
                android:text="@string/rank"
                android:textColor="@color/barbie"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/rankoutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/kanit_light"
                android:padding="20dp"
                android:text="@string/rankoutput"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/btnbackground"
            android:padding="15dp"
            android:fontFamily="@font/kanit_light"
            android:gravity="center"
            android:text="@string/calculate"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
</ScrollView>
